--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
             var objta = document.getElementById("ta");
             var objOpen = document.getElementById("openbtn");
 
+            objta.innerHTML = 'http://acfun.cn\nhttp://bilibili.com'
+
             objOpen.addEventListener('click', function () {
                 var urls = objta.value.split("\n")
 
-                for (var i = 0; i < urls.length; i++) {
-                    window.open(urls[i]);
+                for (var url of urls) {
+                    window.open(url);
+                    // console.log(url);
                 }
             })
         }
@@ -23,9 +26,7 @@
 </head>
 
 <body>
-    <textarea id="ta" style="width: 500px;height: 500px;">
-http://acfun.cn
-http://bilibili.com</textarea>
+    <textarea id="ta" style="width: 500px;height: 500px;"></textarea>
     <button id="openbtn">打开</button>
 </body>
 
